@@ -10,7 +10,7 @@ sd_section("Data",
     "BuckleySaltonSWL",
     "contractions",
     "deamplification.words",
-  	"discourse.markers",
+  	"discourse.markers.alemany",
     "DICTIONARY",
   	"Dolch",
     "emoticon",
