@@ -1,12 +1,12 @@
 % Generated by roxygen2 (4.1.0): do not edit by hand
 % Please edit documentation in R/qdapDictionaries-package.R
 \docType{data}
-\name{discourse.markers}
-\alias{discourse.markers}
-\title{Discourse Markers}
+\name{discourse.markers.alemany}
+\alias{discourse.markers.alemany}
+\title{Alemany's Discourse Markers}
 \format{A data frame with 97 rows and 5 variables}
 \usage{
-data(discourse.markers)
+data(discourse.markers.alemany)
 }
 \description{
 A dataset containing discourse markers
